hodgepodge of code from activities which I will wrangle into the app I meant to build. DB and routes seem to be roughly working, I still need to bring in the scraper, and start crafting user stories

--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "author": "xezian <xezian@icloud.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.16.3"
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.3",
+    "mongoose": "^5.0.11"
   },
   "devDependencies": {
     "concurrently": "^3.5.1",
