--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
-    "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.3",
-    "mongoose": "^5.0.11"
+    "mongoose": "^5.0.11",
+    "request": "^2.85.0"
   },
   "devDependencies": {
     "concurrently": "^3.5.1",
